--- a/liquibase.properties
+++ b/liquibase.properties
@@ -1,5 +1,5 @@
 driver: com.mysql.jdbc.Driver
 classpath: lib/mysql-connector-java-5.1.45.jar
-url: jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf8
+url: jdbc:mysql://localhost:3306/target?useUnicode=true&characterEncoding=utf8
 username: root
 password:
